--- a/css/styles.css
+++ b/css/styles.css
@@ -3,18 +3,64 @@ body {
   color: #434455;
   background-color: #fff;
 }
-
+/*  Reset some default styles*/
 ul,
 ol {
   list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
+}
+
+button {
+  cursor: pointer;
+  font-family: inherit;
 }
 
 a {
   text-decoration: none;
-  color: inherit;
+}
+
+/* common styles */
+.container {
+  width: 100%;
+  max-width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+/* Header styles */
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 24px 0;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
 }
 
 .logo {
+  display: flex;
+  align-items: center;
+  margin-right: 76px;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -26,6 +72,13 @@ a {
 .header-logo .logo-part {
   color: #2e2f42;
 }
+.nav-list {
+  display: flex;
+}
+
+.nav-item:not(:last-child) {
+  margin-right: 40px;
+}
 
 .nav-link {
   font-weight: 500;
@@ -34,8 +87,20 @@ a {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
+
 .contacts {
+  display: flex;
   font-style: normal;
+  margin-left: auto;
+}
+
+.contacts-list {
+  display: flex;
+  align-items: center;
+}
+
+.contacts-item:not(:last-child) {
+  margin-right: 40px;
 }
 .contacts-link {
   font-size: 16px;
@@ -49,23 +114,41 @@ a {
 .contacts-link:focus {
   color: #404bbf;
 }
+/* Hero section styles */
 
 .hero {
   background: #2e2f42;
+  padding-top: 188px;
+  padding-bottom: 188px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 .hero-title {
-  font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  max-width: 496px;
+  margin: 0 auto;
+  margin-bottom: 48px;
 }
 
 .hero-button {
   font-family: 'Roboto', sans-serif;
   background: #4d5ae5;
-
+  display: block;
   cursor: pointer;
 
   font-weight: 500;
@@ -73,13 +156,33 @@ a {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
+  border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hero-button:hover,
 .hero-button:focus {
   background: #404bbf;
 }
-
+/* Section with description */
+.section-description {
+  padding: 120px 0;
+}
+.description-list {
+  display: flex;
+  gap: 24px;
+}
+.description-item {
+  flex-basis: calc(100% - 72px) / 4;
+  display: flex;
+  flex-direction: column;
+}
 .description-title {
   font-weight: 500;
   font-size: 20px;
@@ -92,13 +195,26 @@ a {
   letter-spacing: 0.02em;
 }
 
+/* Section with team members */
+
 .section-team {
   background: #f4f4fd;
 }
 
+.team-container {
+  display: flex;
+  padding: 120px 0;
+  flex-direction: column;
+}
+
+.team-list {
+  display: flex;
+  gap: 24px;
+}
+
 .team-main-title {
+  margin-bottom: 72px;
   text-transform: capitalize;
-  font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
@@ -108,6 +224,11 @@ a {
 
 .team-item {
   background: #fff;
+  border-radius: 0 0 4px 4px;
+  padding: 0px 0px 32px 0px;
+  width: 264px;
+  height: 380px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-title {
@@ -125,6 +246,29 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
 }
+
+/* Section with portfolio items */
+.portfolio-container {
+  display: flex;
+  flex-direction: column;
+  padding: 120px 0;
+}
+.portfolio-main-title {
+  margin-bottom: 72px;
+}
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.portfolio-text-container {
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+  padding: 32px 16px;
+}
+
 .portfolio-main-title {
   text-transform: capitalize;
   font-weight: 700;
@@ -145,16 +289,23 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+/* Page footer styles */
+.footer-container {
+  padding: 120px 0;
+}
 
 .page-footer {
   background-color: #2e2f42;
 }
 .footer-logo .logo-part {
   color: #f4f4fd;
+  display: inline-block;
 }
 
 .footer-text {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  max-width: 264px;
+  margin-top: 16px;
 }
