editing the header and the second section

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 24px 0;
+  padding: 0 15px;
 }
 
 .header-nav {
@@ -86,6 +86,7 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  padding: 24px 0;
 }
 
 .contacts {
@@ -180,15 +181,20 @@ a {
 }
 .description-item {
   flex-basis: calc(100% - 72px) / 4;
-  display: flex;
   flex-direction: column;
 }
+
+.description-item:first-child {
+  flex-basis: calc((100% - 72px) / 4);
+}
+
 .description-title {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 .description-text {
   line-height: 1.5;
@@ -198,12 +204,13 @@ a {
 /* Section with team members */
 
 .section-team {
+  display: flex;
   background: #f4f4fd;
+  padding: 120px 0;
 }
 
 .team-container {
   display: flex;
-  padding: 120px 0;
   flex-direction: column;
 }
 
@@ -229,6 +236,10 @@ a {
   width: 264px;
   height: 380px;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.team-list:first-child {
+  width: calc((100% - 72px) / 4);
 }
 
 .team-title {
