--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@ a {
 /* Header styles */
 .header {
   border-bottom: 1px solid #e7e9fc;
+  padding: 24px 0;
 }
 .header-container {
   display: flex;
@@ -179,13 +180,9 @@ a {
   display: flex;
   gap: 24px;
 }
-.description-item {
-  flex-basis: calc(100% - 72px) / 4;
-  flex-direction: column;
-}
 
-.description-item:first-child {
-  flex-basis: calc((100% - 72px) / 4);
+.description-item {
+  width: calc((100% - 72px) / 4);
 }
 
 .description-title {
@@ -212,6 +209,10 @@ a {
 .team-container {
   display: flex;
   flex-direction: column;
+}
+
+.team-item-text {
+  padding: 32px 0;
 }
 
 .team-list {
@@ -302,7 +303,7 @@ a {
 }
 /* Page footer styles */
 .footer-container {
-  padding: 120px 0;
+  padding: 100px 0;
 }
 
 .page-footer {
