--- a/css/styles.css
+++ b/css/styles.css
@@ -230,6 +230,10 @@ a {
   color: #2e2f42;
 }
 
+.team-text {
+  margin-bottom: 8px;
+}
+
 .team-item {
   background: #fff;
   border-radius: 0 0 4px 4px;
@@ -260,10 +264,13 @@ a {
 }
 
 /* Section with portfolio items */
+.section-portfolio {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
 .portfolio-container {
   display: flex;
   flex-direction: column;
-  padding: 120px 0;
 }
 .portfolio-main-title {
   margin-bottom: 72px;
@@ -272,6 +279,11 @@ a {
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
+  row-gap: 48px;
+}
+
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
 }
 
 .portfolio-text-container {
@@ -296,22 +308,24 @@ a {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 .portfolio-text {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
 /* Page footer styles */
-.footer-container {
-  padding: 100px 0;
-}
-
 .page-footer {
   background-color: #2e2f42;
+  padding: 100px 0;
 }
 .footer-logo .logo-part {
   color: #f4f4fd;
+}
+
+.footer-logo {
   display: inline-block;
+  margin-bottom: 16px;
 }
 
 .footer-text {
@@ -319,5 +333,4 @@ a {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
-  margin-top: 16px;
 }
