--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,11 @@ a {
   text-decoration: none;
 }
 
+p {
+  margin: 0;
+  padding: 0;
+}
+
 /* common styles */
 .container {
   width: 100%;
@@ -44,13 +49,10 @@ a {
 /* Header styles */
 .header {
   border-bottom: 1px solid #e7e9fc;
-  padding: 24px 0;
 }
 .header-container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 0 15px;
 }
 
 .header-nav {
@@ -61,7 +63,8 @@ a {
 .logo {
   display: flex;
   align-items: center;
-  margin-right: 76px;
+
+  padding: 24px 0;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -72,6 +75,7 @@ a {
 }
 .header-logo .logo-part {
   color: #2e2f42;
+  margin-right: 76px;
 }
 .nav-list {
   display: flex;
@@ -82,6 +86,7 @@ a {
 }
 
 .nav-link {
+  display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -105,10 +110,12 @@ a {
   margin-right: 40px;
 }
 .contacts-link {
+  display: block;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  padding: 24px 0;
 }
 .nav-link:hover,
 .nav-link:focus,
@@ -148,10 +155,8 @@ a {
 }
 
 .hero-button {
-  font-family: 'Roboto', sans-serif;
   background: #4d5ae5;
   display: block;
-  cursor: pointer;
 
   font-weight: 500;
   font-size: 16px;
